@@ -5,6 +5,7 @@ New in master
 Bugfixes
 --------
 
+* Make ipynb listings work again
 * Correctly link to listings with spaces in their names
 * import_wordpress plugin doesn't require anymore a translation and
   can use nikola's default if none provided.
